<resources>
    <string name="first_install">首次安装</string>
    <string name="sys_par_setting">系统参数设置</string>
    <string name="device_setting">设备设置</string>
    <string name="commonly_setting">用户常用设置</string>
    <string name="please_input_device_num">请输入设备数量</string>
    <string name="enter">确定</string>
    <string name="device_no_no_matching_please_reenter">设备数量不匹配，请重新输入</string>
    <string name="reenter">重新输入</string>
    <string name="infinite_auto_edit">INFINITE\n自动编址操作</string>
    <string name="bind_orunbind_device">绑定解绑设备</string>
    <string name="bind_device">绑定设备</string>
    <string name="unbind_device">解绑设备</string>
    <string name="related_account">关联账户</string>
    <string name="please_input_related_account">请输入关联账户</string>
    <string name="distributor">分销商</string>
    <string name="please_input_distributor">请输入分销商</string>
    <string name="installers">安装商</string>
    <string name="please_input_installers">请输入安装商</string>
    <string name="operator">运维商</string>
    <string name="please_input_operator">请输入运维商</string>
    <string name="local_res_policy">本地资源政策</string>
    <string name="par_adress">2030资源地址</string>
    <string name="auto_pos">自动定位</string>
    <string name="map_pos">地图获取</string>
    <string name="manual_input">手动输入</string>
    <string name="net_setting">网络设置</string>
    <string name="network_port1">网口1</string>
    <string name="network_port2">网口2</string>
    <string name="wifi">WIFI</string>
    <string name="fourg">4G</string>
    <string name="network_port_par_setting">网口参数设置</string>
    <string name="input_value">输入值</string>

    <!--网口参数-->
    <string name="gateway_ip">网关IP</string>
    <string name="subnet_mask_ip">子网掩码IP</string>
    <string name="gateway">网关</string>
    <string name="iccid_code">ICCID码</string>
    <string name="imsi_code">IMSI码</string>


    <string name="connect_suc">成功连接</string>
    <string name="connected">已连接</string>
    <string name="mac_address">MAC地址</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="time_zone">时区</string>

</resources>