<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/input_location_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_20"
        android:text="@string/manual_input"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/ll_latitude"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_33"
        android:layout_marginTop="@dimen/qb_px_26"
        android:background="#000000"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_ll_latitude_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/qb_px_15"
            android:text="@string/latitude"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_latitude"
            android:layout_width="@dimen/qb_px_80"
            android:layout_height="@dimen/qb_px_33"
            android:layout_marginStart="@dimen/qb_px_10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_longitude"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_33"
        android:layout_marginTop="@dimen/qb_px_26"
        android:background="#000000"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_latitude"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_ll_longitude_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/qb_px_15"
            android:text="@string/longitude"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time_zone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_33"
        android:layout_marginTop="@dimen/qb_px_25"
        android:layout_marginBottom="@dimen/qb_px_45"
        android:background="#000000"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_longitude"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_ll_time_zone_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/qb_px_15"
            android:text="@string/time_zone"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
