<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.ess.localsetting.clickinterface.IDeviceSettingsListener" />

        <variable
            name="backListener"
            type="com.ess.localsetting.clickinterface.IBackListener" />

        <variable
            name="titleName"
            type="java.lang.String" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/device_setting_bg">

        <include
            android:id="@+id/title"
            layout="@layout/activity_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:listener="@{backListener}"
            bind:titleName="@{titleName}" />

        <EditText
            android:id="@+id/ed_input_num"
            android:layout_width="@dimen/qb_px_152"
            android:layout_height="@dimen/qb_px_43"
            android:layout_marginTop="@dimen/qb_px_19"
            android:background="@drawable/device_setting_ed_setnum_bg"
            android:gravity="center"
            android:hint="@string/please_input_device_num"
            android:inputType="number"
            android:lines="1"
            android:textColorHint="#BFD8D8D8"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="@dimen/qb_px_74"
            android:layout_height="@dimen/qb_px_29"
            android:layout_marginTop="@dimen/qb_px_14"
            android:background="@drawable/device_setting_btn_enter_bg"
            android:onClick="@{()->listener.enter()}"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_input_num"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_enter2"
            android:layout_width="@dimen/qb_px_199"
            android:layout_height="@dimen/qb_px_42"
            android:layout_marginBottom="@dimen/qb_px_33"
            android:background="@drawable/device_setting_btn_enter2_able_press_bg"
            android:onClick="@{()->listener.enter2()}"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_device_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_0"
            android:layout_marginStart="@dimen/qb_px_14"
            android:layout_marginTop="@dimen/qb_px_29"
            android:layout_marginEnd="@dimen/qb_px_14"
            android:layout_marginBottom="@dimen/qb_px_29"
            android:background="@drawable/device_recycler_bg"
            app:layout_constraintBottom_toTopOf="@+id/btn_enter2"
            app:layout_constraintTop_toBottomOf="@+id/btn_enter"
            tools:ignore="MissingConstraints" />
        <!--    输入的设备数量和真实设备数量不对应的布局    -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_device_no_matching_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40FFFFFF"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_device_no_matching"
                android:layout_width="@dimen/qb_px_0"
                android:layout_height="@dimen/qb_px_200"
                android:layout_marginStart="@dimen/qb_px_30"
                android:layout_marginTop="@dimen/qb_px_187"
                android:layout_marginEnd="@dimen/qb_px_30"
                android:background="@drawable/device_recycler_bg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tv_device_no_matching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_no_no_matching_please_reenter"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_reenter"
                    android:layout_width="@dimen/qb_px_198"
                    android:layout_height="@dimen/qb_px_41"
                    android:layout_marginBottom="@dimen/qb_px_22"
                    android:background="@drawable/device_no_matching_btn_bg"
                    android:onClick="@{()->listener.reenter()}"
                    android:text="@string/reenter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/qb_px_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>